04-istio-virtual-service/webapp-httplookup-vs.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: webservice-httplookup-vs
spec:
  hosts:
    - webservice
  http:
    - match:
        # k get po
        # k exec pod/<pod-id> -- wget http://webservice --header='x-upgrade: TRUE'
        - headers:
            x-upgrade:
              exact: 'TRUE'
        - queryParams:
            ver:
              exact: v1
          method:
            exact: GET
      route:
        - destination:
            host: webservice
            subset: v1
    - route:
        - destination:
            host: webservice
            subset: v0
