04-istio-virtual-service/webapp-rewrite-vs.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: webservice-rewrite-vs
spec:
  hosts:
    - webservice
  http:
    - match:
        # k get po
        # k exec pod/<pod-id> -- wget http://webservice/hello
        - uri:
            prefix: /hello
      rewrite:
        uri: /
      route:
        - destination:
            host: webservice
            subset: v1
