04-istio-virtual-service/webapp-simple-vs.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: webservice-vs
spec:
  hosts:
    - webservice
  http:
    - route:
        - destination:
            host: webservice
            subset: v1
