04-istio-virtual-service/webapp-wtdist-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: webservice-wtdist-vs
spec:
  hosts:
    - webservice
  http:
    - route:
        - destination:
            host: webservice
            subset: v0
          weight: 25
        - destination:
            host: webservice
            subset: v1
          weight: 75
